@@ -339,6 +339,8 @@ static void gtr_u(void);	static void gti_u(void);
 static void ner(void);		static void nei(void);
 static void casr(void);		static void casi(void);
 static void movr(void);		static void movi(void);
+static void ext(void);		static void ext_u(void);
+static void dep(void);
 static void extr_c(void);	static void extr_uc(void);
 static void extr_s(void);	static void extr_us(void);
 #if __WORDSIZE == 64
@@ -703,6 +705,8 @@ static instr_t		  instr_vector[] = {
     entry(ner),		entry(nei),
     entry(casr),	entry(casi),
     entry(movr),	entry(movi),
+    entry(ext),		entry(ext_u),
+    entry(dep),
     entry(extr_c),	entry(extr_uc),
     entry(extr_s),	entry(extr_us),
 #if __WORDSIZE == 64
@@ -1120,6 +1124,14 @@ name(void)								\
     jit_word_t	im = get_imm();						\
     jit_gpr_t r1 = get_ireg(), r2 = get_ireg();				\
     jit_##name(r0, im, r1, r2);						\
+}
+
+#define	entry_ir_ir_im_im(name)						\
+static void								\
+name(void) {								\
+    jit_gpr_t	r0 = get_ireg(), r1 = get_ireg();			\
+    jit_word_t	i0 = get_imm(),  i1 = get_imm();			\
+    jit_##name(r0, r1, i0, i1);						\
 }
 
 #define entry_ir_ir(name)						\
@@ -1607,6 +1619,9 @@ movi(void)
     }
     jit_movi(r0, (jit_word_t)value);
 }
+
+entry_ir_ir_im_im(ext)		entry_ir_ir_im_im(ext_u)
+entry_ir_ir_im_im(dep)
 entry_ir_ir(extr_c)		entry_ir_ir(extr_uc)
 entry_ir_ir(extr_s)		entry_ir_ir(extr_us)
 #if __WORDSIZE == 64
