@@ -1628,6 +1628,9 @@ _jit_classify(jit_state_t *_jit, jit_code_t code)
 	    mask = jit_cc_a0_reg|jit_cc_a0_chg|jit_cc_a1_int|
 		   jit_cc_a2_reg|jit_cc_a2_rlh;
 	    break;
+	case jit_code_ext:	case jit_code_ext_u:	case jit_code_dep:
+	    mask = jit_cc_a0_reg|jit_cc_a0_chg|jit_cc_a1_reg|jit_cc_a2_rlh;
+	    break;
 	default:
 	    abort();
     }
